# dnn

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  README.rst  index.html  params.json
data/12306/: get_images.py
data/addition/: rnn_model.xml  rnn_model.yml  rnn_solver.xml
data/binary_addition/: rnn_solver.xml
data/chars74k/: get_chars74k.sh
data/cifar/: attention_model.yml  attention_solver.xml  convnet_model.yml  convnet_solver.xml  get_cifar10.mk  get_cifar10.sh  get_cifar100.mk  get_cifar100.sh
data/icdar2003/: get_icdar2003.sh
data/mnist/: addition_model.yml  addition_solver.xml  attention_model.yml  attention_solver.xml  get_mnist.mk  lenet_model.xml  lenet_model.yml  lenet_solver.xml  localize_convnet_model.yml  localize_convnet_solver.xml  model.xml  multi_convnet_model.yml  multi_convnet_solver.xml  multi_stn_model.yml  multi_stn_solver.xml  twodigit_convnet_model.yml  twodigit_convnet_solver.xml  twodigit_model.yml  twodigit_solver.xml
data/primate/: convnet_mode.yml  convnet_model.yml  convnet_solver.xml  get_primate.sh
data/svhn/: Makefile  dram_model.xml  dram_model.yml  dram_solver.xml  get_svhn.mk  get_svhn.sh  mat2xml.m  solver.xml
doc/sphinx/: Makefile  conf.py  index.rst  overview.rst  roadmap.rst
misc/: chinfo.py
modules/cv/: CMakeLists.txt
modules/cv/include/opencv2/imgproc/: imgproc_c.h
modules/cv/src/: distransform.cpp  templmatch.cpp
modules/cvutil/: CMakeLists.txt
modules/cvutil/include/: compvis.h  cvaam.h  cvchamfer.h  cvclassifier.h  cvclassifier4fdesc.h  cvclassifier4ls.h  cvext.h  cvext.hpp  cvext_c.h  cvext_io.h  cvfacecoder.h  cvhanddetector.h  cvhandtracker.h  cvhandvalidator.h  cvhog.h  cvhomography.h  cvimgwarp.h  cvinvcomp.h  cvkfd.h  cvkfd4hog.h  cvkfd4hog_template.h  cvlda.h  cvlda4hog.h  cvlevelset.h  cvmaxflow.h  cvparticlebase.h  cvparticlefilter.h  cvparticleobserve.h  cvparticlestate.h  cvparticleutil.h  cvpictstruct.h  cvpwptracker.h  cvsgkfd.h  cvsgkfd4hog.h  cvsgkfd4hog_template.h  cvshapedesc.h  cvshapeprior.h  cvsparsecoding.h  cvsql.h  cvstageddetecthaar.h  (+7 more)
modules/cvutil/src/: SConscript  cvaam.cpp  cvchamfer.cpp  cvext_common.cpp  cvext_io.cpp  cvextutils.cpp  cvfacecoder.cpp  cvhanddetector.cpp  cvhandtracker.cpp  cvhandvalid_data.cpp  cvhandvalidator.cpp  cvhog.cpp  cvhog_data.cpp  cvhomography.cpp  cvimgwarp.cpp  cvinvcomp.cpp  cvio.cpp  cvkfd.cpp  cvlda.cpp  cvlevelset.cpp  cvmaxflow.cpp  cvmotion.cpp  cvpartialleastsquares.cpp  cvparticlebase.cpp  cvparticlefilter.cpp  cvparticleobserve.cpp  cvparticlestate.cpp  cvparticleutil.cpp  cvpictstruct.cpp  cvpwptracker.cpp  cvsgkfd.cpp  cvshapedesc.cpp  cvshapeprior.cpp  cvshapeprior_data.cpp  cvsparsecoding.cpp  cvstageddetecthaar.cpp  cvstageddetecthaar_data.cpp  cvstageddetecthog.cpp  cvstip.cpp  cvsuperres.cpp  (+3 more)
modules/cvutil/test/: cvinvcomp_.h  cvio_test.cpp  main00_cppmemory.cpp  main00_filp.cpp  main00_template.cpp  main01_pca.cpp  main02_asm.cpp  main03_motionseg.cpp  main04_invcomp.cpp  main05_bgcut.cpp  main06_handcut.cpp  main07_particle.cpp  main08_aam.cpp  main09_train.cpp  main10_hand.cpp  main10_head.cpp  main11_createsamples.cpp  main12_haartraining.cpp  main14_facedetect.cpp  main15_optflow.cpp  main16_msepf.cpp  main17_meanshift.cpp  main18_articulated.cpp  main19_invcomp.cpp  main20_handtracker.cpp  main21_videocap.cpp  main22_jet.cpp  main23_chamfer.cpp  main24_levelset.cpp  main25_levelset2.cpp  main26_optflow.cpp  main27_pwptracker.cpp  main27_pwptracker_both.cpp  main28_shapereg.cpp  main29_hog.cpp  main30_hogtrain.cpp  main30_hogtrain2.cpp  main31_hogtest.cpp  main31_testsvm4hog.cpp  main32_hogrecog.cpp  (+12 more)
modules/cxcore/: CMakeLists.txt
modules/cxcore/include/: cvconfig.h  cvconfig_windows.h
modules/cxcore/src/: cmdparser.cpp  cvconfig.h  matmul.cpp  persistence.cpp  system.cpp  version_string.inc
modules/dnn/: CMakeLists.txt
modules/dnn/include/: cnn.h  dnn.h  layers.h  list.h
modules/dnn/include/opencv2/ml/: ml.hpp
modules/dnn/src/: _dnn.h  cnn.cpp  combine_layer.cpp  conv_layer.cpp  dnn.cpp  fc_layer.cpp  imgwarp_layer.cpp  input_layer.cpp  merge_layer.cpp  pool_layer.cpp  precomp.hpp  relu_layer.cpp  repeat_layer.cpp  rnn_layer.cpp  sigmoid_layer.cpp  softmax_layer.cpp  subsample_layer.cpp  tdist_layer.cpp  utils.cpp
modules/dnn/test/: test_cnn.cpp  test_dnn.cpp  test_gbttest.cpp  test_mltests.cpp  test_mltests2.cpp  test_precomp.hpp  test_save_load.cpp
modules/gpu/: CMakeLists.txt
modules/gpu/include/: basic.hpp  gpumat.h  oclobject.hpp
modules/gpu/src/: basic.cpp  cmdoptions.cpp  gemm.cpp  oclobject.cpp
modules/highgui/: CMakeLists.txt
modules/highgui/src/: cap_ffmpeg.cpp  cap_ffmpeg_impl.hpp  cap_v4l.cpp  ffmpeg_codecs.hpp  grfmt_png.cpp  grfmts.hpp  window_gtk.cpp
modules/latentssvm-v0.12/: CMakeLists.txt  svm_struct_latent_api.h
modules/latentssvm-v0.12/svm_light/: svm_common.h  svm_learn.h
modules/ml/: CMakeLists.txt
modules/ml/include/opencv2/ml/: cnn.h  cnn_bad.h
modules/ml/src/: cnn.cpp  cnn_bad.cpp  cnn_old.cpp
modules/ml/test/: test_cnn.cpp  test_emknearestkmeans.cpp  test_precomp.hpp
modules/ocl/: CMakeLists.txt  gemm.cl  gemm.cpp  gemm.h
modules/pose/: CMakeLists.txt
modules/ts/: CMakeLists.txt
modules/ts/include/opencv2/ts/: gpu_perf.hpp  gpu_test.hpp  ts_perf.hpp
modules/ts/src/: gpu_perf.cpp  gpu_test.cpp  ts_perf.cpp
modules/video/: CMakeLists.txt
modules/zlib/: CMakeLists.txt
src/: ConvNN.cpp  ConvNN.h  annotator_main.cpp  dram.cpp  dram.h  network.cpp  network.h  network_main.cpp  review_main.cpp  test027_pwptracker.cpp  test042_optflow.cpp  test043_optflow.cpp  test044_cnn.cpp  test045_latentssvm.cpp  test046_dram.cpp  test047_network.cpp  test048_mnist2xml.cpp  test049_additiongen.cpp  test049_additiongen_binary.cpp  transfer_addition.cpp  transfer_cifar.cpp  transfer_mnist.cpp  transfer_mnist_addition.cpp  transfer_mnist_lenet.cpp  transfer_mnist_localize.cpp  transfer_mnist_multi.cpp  transfer_mnist_twodigit.cpp  transfer_primate_convnet.cpp  transfer_svhn.cpp  transfer_svhn_dram.cpp  transform_main.cpp  transformer_main.cpp
(+12 files in other folders)
